fixed cards widths, added spillover to stat bar

--- a/style.css
+++ b/style.css
@@ -86,3 +86,9 @@ footer {
   width: 100%;
   background-color: var(--slate);
 }
+
+@media screen and (min-width: 576px) {
+  .abs-position {
+    position: absolute;
+  }
+}
